# rust-closests-points

./: Cargo.toml
src/: main.rs
